--- a/index.html
+++ b/index.html
@@ -149,140 +149,140 @@
           <div class="portfolio-grid">
             <div class="portfolio-item indoor">
               <img
-                data-src="./src/img/HDR Indoor/1.webp"
+                src="./src/img/HDR Indoor/1.webp"
                 alt="Indoor Image 1"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item outdoor">
               <img
-                data-src="./src/img/HDR OutDoor/1.webp"
+                src="./src/img/HDR OutDoor/1.webp"
                 alt="Outdoor Image 1"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item indoor">
               <img
-                data-src="./src/img/HDR Indoor/2.webp"
+                src="./src/img/HDR Indoor/2.webp"
                 alt="Indoor Image 2"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item outdoor">
               <img
-                data-src="./src/img/HDR OutDoor/2.webp"
+                src="./src/img/HDR OutDoor/2.webp"
                 alt="Outdoor Image 2"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item indoor">
               <img
-                data-src="./src/img/HDR Indoor/3.webp"
+                src="./src/img/HDR Indoor/3.webp"
                 alt="Indoor Image 3"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item outdoor">
               <img
-                data-src="./src/img/HDR OutDoor/3.webp"
+                src="./src/img/HDR OutDoor/3.webp"
                 alt="Outdoor Image 3"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item indoor">
               <img
-                data-src="./src/img/HDR Indoor/4.webp"
+                src="./src/img/HDR Indoor/4.webp"
                 alt="Indoor Image 4"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item outdoor">
               <img
-                data-src="./src/img/HDR OutDoor/4.webp"
+                src="./src/img/HDR OutDoor/4.webp"
                 alt="Outdoor Image 4"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item indoor">
               <img
-                data-src="./src/img/HDR Indoor/5.webp"
+                src="./src/img/HDR Indoor/5.webp"
                 alt="Indoor Image 5"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item outdoor">
               <img
-                data-src="./src/img/HDR OutDoor/5.webp"
+                src="./src/img/HDR OutDoor/5.webp"
                 alt="Outdoor Image 5"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item indoor">
               <img
-                data-src="./src/img/HDR Indoor/6.webp"
+                src="./src/img/HDR Indoor/6.webp"
                 alt="Indoor Image 6"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item outdoor">
               <img
-                data-src="./src/img/HDR OutDoor/6.webp"
+                src="./src/img/HDR OutDoor/6.webp"
                 alt="Outdoor Image 6"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item indoor">
               <img
-                data-src="./src/img/HDR Indoor/7.webp"
+                src="./src/img/HDR Indoor/7.webp"
                 alt="Indoor Image 7"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item outdoor">
               <img
-                data-src="./src/img/HDR OutDoor/7.webp"
+                src="./src/img/HDR OutDoor/7.webp"
                 alt="Outdoor Image 7"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item indoor">
               <img
-                data-src="./src/img/HDR Indoor/8.webp"
+                src="./src/img/HDR Indoor/8.webp"
                 alt="Indoor Image 8"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item outdoor">
               <img
-                data-src="./src/img/HDR OutDoor/8.webp"
+                src="./src/img/HDR OutDoor/8.webp"
                 alt="Outdoor Image 8"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item indoor">
               <img
-                data-src="./src/img/HDR Indoor/9.webp"
+                src="./src/img/HDR Indoor/9.webp"
                 alt="Indoor Image 9"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item outdoor">
               <img
-                data-src="./src/img/HDR OutDoor/9.webp"
+                src="./src/img/HDR OutDoor/9.webp"
                 alt="Outdoor Image 9"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item indoor">
               <img
-                data-src="./src/img/HDR Indoor/10.webp"
+                src="./src/img/HDR Indoor/10.webp"
                 alt="Indoor Image 10"
                 class="lazy-image"
               />
             </div>
             <div class="portfolio-item outdoor">
               <img
-                data-src="./src/img/HDR OutDoor/10.webp"
+                src="./src/img/HDR OutDoor/10.webp"
                 alt="Outdoor Image 10"
                 class="lazy-image"
               />
