--- a/index.html
+++ b/index.html
@@ -148,67 +148,67 @@
           <!-- Portfolio images -->
           <div class="portfolio-grid">
             <div class="portfolio-item indoor">
-              <img src="./src/img/HDR Indoor/1.webp" alt="Indoor Image 1" />
+              <img src="src/img/HDR Indoor/1.webp" alt="Indoor Image 1" />
             </div>
             <div class="portfolio-item outdoor">
-              <img src="./src/img/HDR OutDoor/1.webp" alt="Outdoor Image 1" />
+              <img src="src/img/HDR OutDoor/1.webp" alt="Outdoor Image 1" />
             </div>
             <div class="portfolio-item indoor">
-              <img src="./src/img/HDR Indoor/2.webp" alt="Indoor Image 2" />
+              <img src="src/img/HDR Indoor/2.webp" alt="Indoor Image 2" />
             </div>
             <div class="portfolio-item outdoor">
-              <img src="./src/img/HDR OutDoor/2.webp" alt="Outdoor Image 2" />
+              <img src="src/img/HDR OutDoor/2.webp" alt="Outdoor Image 2" />
             </div>
             <div class="portfolio-item indoor">
-              <img src="./src/img/HDR Indoor/3.webp" alt="Indoor Image 3" />
+              <img src="src/img/HDR Indoor/3.webp" alt="Indoor Image 3" />
             </div>
             <div class="portfolio-item outdoor">
-              <img src="./src/img/HDR OutDoor/3.webp" alt="Outdoor Image 3" />
+              <img src="src/img/HDR OutDoor/3.webp" alt="Outdoor Image 3" />
             </div>
             <div class="portfolio-item indoor">
-              <img src="./src/img/HDR Indoor/4.webp" alt="Indoor Image 4" />
+              <img src="src/img/HDR Indoor/4.webp" alt="Indoor Image 4" />
             </div>
             <div class="portfolio-item outdoor">
-              <img src="./src/img/HDR OutDoor/4.webp" alt="Outdoor Image 4" />
+              <img src="src/img/HDR OutDoor/4.webp" alt="Outdoor Image 4" />
             </div>
             <div class="portfolio-item indoor">
-              <img src="./src/img/HDR Indoor/5.webp" alt="Indoor Image 5" />
+              <img src="src/img/HDR Indoor/5.webp" alt="Indoor Image 5" />
             </div>
             <div class="portfolio-item outdoor">
-              <img src="./src/img/HDR OutDoor/5.webp" alt="Outdoor Image 5" />
+              <img src="src/img/HDR OutDoor/5.webp" alt="Outdoor Image 5" />
             </div>
             <div class="portfolio-item indoor">
-              <img src="./src/img/HDR Indoor/6.webp" alt="Indoor Image 6" />
+              <img src="src/img/HDR Indoor/6.webp" alt="Indoor Image 6" />
             </div>
             <div class="portfolio-item outdoor">
-              <img src="./src/img/HDR OutDoor/6.webp" alt="Outdoor Image 6" />
+              <img src="src/img/HDR OutDoor/6.webp" alt="Outdoor Image 6" />
             </div>
             <div class="portfolio-item indoor">
-              <img src="./src/img/HDR Indoor/7.webp" alt="Indoor Image 7" />
+              <img src="src/img/HDR Indoor/7.webp" alt="Indoor Image 7" />
             </div>
             <div class="portfolio-item outdoor">
-              <img src="./src/img/HDR OutDoor/7.webp" alt="Outdoor Image 7" />
+              <img src="src/img/HDR OutDoor/7.webp" alt="Outdoor Image 7" />
             </div>
             <div class="portfolio-item indoor">
-              <img src="./src/img/HDR Indoor/8.webp" alt="Indoor Image 8" />
+              <img src="src/img/HDR Indoor/8.webp" alt="Indoor Image 8" />
             </div>
             <div class="portfolio-item outdoor">
-              <img src="./src/img/HDR OutDoor/8.webp" alt="Outdoor Image 8" />
+              <img src="src/img/HDR OutDoor/8.webp" alt="Outdoor Image 8" />
             </div>
             <div class="portfolio-item indoor">
-              <img src="./src/img/HDR Indoor/9.webp" alt="Indoor Image 9" />
+              <img src="src/img/HDR Indoor/9.webp" alt="Indoor Image 9" />
             </div>
             <div class="portfolio-item outdoor">
-              <img src="./src/img/HDR OutDoor/9.webp" alt="Outdoor Image 9" />
+              <img src="src/img/HDR OutDoor/9.webp" alt="Outdoor Image 9" />
             </div>
             <div class="portfolio-item indoor">
-              <img src="./src/img/HDR Indoor/10.webp" alt="Indoor Image 10" />
+              <img src="src/img/HDR Indoor/10.webp" alt="Indoor Image 10" />
             </div>
             <div class="portfolio-item outdoor">
-              <img src="./src/img/HDR OutDoor/10.webp" alt="Outdoor Image 10" />
+              <img src="src/img/HDR OutDoor/10.webp" alt="Outdoor Image 10" />
             </div>
             <div class="portfolio-item outdoor">
-              <img src="./src/img/HDR Indoor/11.webp" alt="Indoor Image 10" />
+              <img src="src/img/HDR Indoor/11.webp" alt="Indoor Image 10" />
             </div>
           </div>
         </div>
