--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
               <label for="">Message</label>
               <span>Message</span>
             </div>
-            <input type="submit" value="Send" class="btn" />
-            <!-- <button type="submit" class="btn">Send</button> -->
+            <!-- <input type="submit" value="Send" class="btn-submit" /> -->
+            <button type="submit" class="btn-submit">Send</button>
           </form>
           <div class="alert d-flex align-items-center" role="alert">
             <button class="btn--close-alert">&times;</button>
