--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <div class="image--container">
+            <div class="image--box">
               <img
                 src="./src/img/working-image.jpg"
                 alt="working-image"
@@ -245,7 +245,9 @@
           <div class="social-media">
             <p>Connect with us :</p>
             <div class="social-icons">
-              <a href="#">
+              <a
+                href="https://www.facebook.com/profile.php?id=61565671952630&mibextid=ZbWKwL"
+              >
                 <i class="fab fa-facebook-f"></i>
               </a>
               <a href="mailto:gokulkrishnan0429@gmail.com"
