--- a/index.html
+++ b/index.html
@@ -35,11 +35,15 @@
     />
     <!--Bootstrap 5-->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
     />
     <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   </head>
@@ -94,7 +98,11 @@
               visually stunning representations,highlights the best features.
             </p>
           </div>
-          <a href="#portfolio" type="button" class="button">View Gallery</a>
+          <div class="d-grid gap-2 d-md-block">
+            <a href="#portfolio" type="button" class="btn-gallery"
+              >View Gallery</a
+            >
+          </div>
         </div>
       </div>
     </section>
@@ -289,9 +297,11 @@
               <span>Message</span>
             </div>
             <!-- <input type="submit" value="Send" class="btn-submit" /> -->
-            <button type="submit" class="btn-submit">Send</button>
+            <button type="submit" class="btn-submit" onclick="reset()">
+              Send
+            </button>
           </form>
-          <div class="alert d-flex align-items-center" role="alert">
+          <div class="alert d-flex align-items-center hide" role="alert">
             <button class="btn--close-alert">&times;</button>
 
             <div class="alert-text">
@@ -308,6 +318,7 @@
         </div>
       </div>
     </section>
+
     <div class="copyright">
       <p>
         <span
