--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <nav id="navbar" class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a href="index.html" class="navbar-brand"
-            ><img src="src/img/G.png" width="40px"
+            ><img src="src/img/Logo.png"
           /></a>
           <!-- Toggler Button -->
           <button
@@ -81,7 +81,7 @@
 
           <!-- Navbar Links -->
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav m-auto">
+            <ul class="navbar-nav ms-auto">
               <li class="nav-item">
                 <a class="nav-link active" href="#home">Home</a>
               </li>
@@ -290,7 +290,7 @@
         <div class="contact-form">
           <form action="https://formspree.io/f/xnnqzlvy" method="post">
             <h3 class="title reveal">Contact us</h3>
-            <div class="input-container reveal">
+            <div class="input-container">
               <input type="text" name="name" class="input" required />
               <label for="">Username</label>
               <span>Username</span>
@@ -347,9 +347,7 @@
     </div>
     <!---->
     <div class="help-button">
-      <a href="https://wa.me/919080759637"
-        >Wanna Chat? <i class="fab fa-whatsapp"></i
-      ></a>
+      <a href="https://wa.me/919080759637"><i class="fab fa-whatsapp"></i></a>
     </div>
   </body>
 </html>
