--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <nav id="navbar" class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a href="index.html" class="navbar-brand"
-            ><img src="src/img/Logo.png"
+            ><img src="./src/img/Logo.png"
           /></a>
           <!-- Toggler Button -->
           <button
