--- a/index.html
+++ b/index.html
@@ -337,10 +337,10 @@
       <p>
         <span
           ><i class="fa-regular fa-copyright" style="color: #553131"></i></span
-        >Copyright 2024 - Developed by
+        >Copyright 2024 -
         <span style="color: yellow"
           ><a href="https://kathirvel-portfolio.netlify.app"
-            >Kathirvel T</a
+            >Pixel Perfect Infotech</a
           ></span
         >
       </p>
