--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
     </section>
     <!-------------------------------Portfolio----------------------->
     <section id="portfolio">
-      <div class="container">
-        <h1 class="reveal">Visual Gallery</h1>
-        <p class="reveal">A showcase of creativity and detail</p>
+      <div class="container reveal">
+        <h1>Visual Gallery</h1>
+        <p>A showcase of creativity and detail</p>
         <div class="portfolio-section">
-          <div class="filter-buttons reveal">
+          <div class="filter-buttons">
             <button class="filter-btn active" onclick="filterImages('all')">
               All
             </button>
@@ -241,32 +241,29 @@
     <section id="contact">
       <div class="form reveal">
         <div class="contact-info">
-          <h3 class="title reveal">Let's get in touch</h3>
-          <p class="text reveal">
+          <h3 class="title">Let's get in touch</h3>
+          <p class="text">
             I’d love to hear from you. Let’s create something amazing!
           </p>
 
-          <div class="info reveal">
+          <div class="info">
             <div class="information">
               <i class="fa-solid fa-location-dot icon"></i>
-
               <p>24/5 Muniyapan Nagar,Pallipalayam,Namakkal</p>
             </div>
             <div class="information">
               <i class="fa-solid fa-envelope icon"></i>
-
               <p>gokulkrishnan0429@gmail.com</p>
             </div>
             <div class="information">
               <i class="fa-solid fa-phone icon"></i>
-
               <p>+91 9080759637</p>
             </div>
           </div>
 
           <div class="social-media">
-            <p class="reveal">Connect with us :</p>
-            <div class="social-icons reveal">
+            <p>Connect with us :</p>
+            <div class="social-icons">
               <a
                 href="https://www.facebook.com/profile.php?id=61565671952630&mibextid=ZbWKwL"
               >
@@ -289,11 +286,11 @@
 
         <div class="contact-form">
           <form action="https://formspree.io/f/xnnqzlvy" method="post">
-            <h3 class="title reveal">Contact us</h3>
+            <h3 class="title">Contact us</h3>
             <div class="input-container">
               <input type="text" name="name" class="input" required />
-              <label for="">Username</label>
-              <span>Username</span>
+              <label for="">Your Name</label>
+              <span>Your Name</span>
             </div>
             <div class="input-container">
               <input type="email" name="email" class="input" required />
@@ -336,12 +333,10 @@
     <div class="copyright">
       <p>
         <span
-          ><i class="fa-regular fa-copyright" style="color: #553131"></i></span
+          ><i class="fa-regular fa-copyright" style="color: yellow"></i></span
         >Copyright 2024 -
         <span style="color: yellow"
-          ><a href="https://kathirvel-portfolio.netlify.app"
-            >Pixel Perfect Infotech</a
-          ></span
+          ><a href="index.html">Pixel Perfect Infotech</a></span
         >
       </p>
     </div>
