--- a/index.html
+++ b/index.html
@@ -156,13 +156,16 @@
         <p>A showcase of creativity and detail</p>
         <div class="portfolio-section">
           <div class="filter-buttons">
-            <button class="filter-btn active" onclick="filterImages('all')">
+            <button
+              class="filter-btn active"
+              onclick="filterImages('event,all')"
+            >
               All
             </button>
-            <button class="filter-btn" onclick="filterImages('indoor')">
+            <button class="filter-btn" onclick="filterImages('event,indoor')">
               Indoor
             </button>
-            <button class="filter-btn" onclick="filterImages('outdoor')">
+            <button class="filter-btn" onclick="filterImages('event,outdoor')">
               Outdoor
             </button>
           </div>
