--- a/index.html
+++ b/index.html
@@ -156,16 +156,13 @@
         <p>A showcase of creativity and detail</p>
         <div class="portfolio-section">
           <div class="filter-buttons">
-            <button
-              class="filter-btn active"
-              onclick="filterImages('event,all')"
-            >
+            <button class="filter-btn active" onclick="filterImages('all')">
               All
             </button>
-            <button class="filter-btn" onclick="filterImages('event,indoor')">
+            <button class="filter-btn" onclick="filterImages('indoor')">
               Indoor
             </button>
-            <button class="filter-btn" onclick="filterImages('event,outdoor')">
+            <button class="filter-btn" onclick="filterImages('outdoor')">
               Outdoor
             </button>
           </div>
